# NitroSDK

./: .gitattributes  meson.build  meson.options
include/: nitro.h  nitro_sp.h  nitro_win32.h
include/nitro/: cht.h  ctrdg.h  dtcm_begin.h  dtcm_end.h  env.h  exi.h  gx.h  ioreg.h  itcm_begin.h  itcm_end.h  memorymap.h  memorymap_sp.h  misc.h  os.h  os_sp.h  pad.h  parent_begin.h  parent_end.h  platform.h  section.h  sinit.h  snd.h  snd_sp.h  spec.h  spi.h  types.h  utest.h  version.h  version_begin.h  version_end.h  wbt.h  wm.h  wram_begin.h  wram_end.h  wvr.h
include/nitro/card/: backup.h  common.h  eeprom.h  flash.h  fram.h  pullOut.h  rom.h
include/nitro/cp/: context.h  divider.h
include/nitro/dgt/: common.h  dgt.h
include/nitro/env/: env_system.h
include/nitro/ext/: ext_keycontrol.h  ext_scrntest.h
include/nitro/fs/: archive.h  file.h  overlay.h
include/nitro/fx/: fx.h  fx_cp.h  fx_mtx22.h  fx_mtx33.h
include/nitro/gx/: g2.h  g2_oam.h  g3.h  g3b.h  (+11 more)
libraries/: meson.build
libraries/card/: meson.build
libraries/card/include/: card_common.h  card_rom.h  card_spi.h
libraries/card/src/: card_backup.c  card_common.c  card_pullOut.c  card_request.c  card_rom.c  card_rom_teg.c  card_spi.c  meson.build
libraries/cht/: meson.build
libraries/cp/: meson.build
libraries/cp/src/: cp_context.c  meson.build
libraries/ctrdg/: meson.build
libraries/ctrdg/include/: ctrdg_work.h
libraries/ctrdg/src/: ctrdg.c  ctrdg_backup.c  ctrdg_flash_AT29LV512.c  ctrdg_flash_LE26FV10N1TS-10.c  ctrdg_flash_LE39FW512.c  ctrdg_flash_MX29L010.c  ctrdg_flash_MX29L512.c  ctrdg_flash_common.c  ctrdg_proc.c  ctrdg_sram.c  ctrdg_task.c  ctrdg_vib.c  meson.build
libraries/dgt/: meson.build
libraries/e3s/: meson.build
libraries/env/: meson.build
libraries/env/src/: env_system.c  meson.build
libraries/ext/: meson.build
libraries/ext/src/: ext_keycontrol.c  ext_scrntest.c  meson.build
libraries/fs/: meson.build
libraries/fs/include/: command.h  mw_dtor.h  rom.h  util.h
libraries/fs/src/: fs_archive.c  fs_command.c  fs_command_default.c  fs_file.c  fs_mem.c  fs_overlay.c  fs_rom.c  meson.build
libraries/fx/: meson.build
libraries/fx/src/: fx.c  fx_asinacosidx.c  fx_atan.c  fx_atanidx.c  fx_cp.c  fx_mtx22.c  fx_mtx33.c  fx_mtx43.c  fx_mtx44.c  fx_sincos.c  fx_trig.c  fx_vec.c  meson.build
libraries/gx/: meson.build
libraries/gx/include/: gxasm.h  gxdma.h  gxstate.h
libraries/gx/src/: g2.c  g3.c  g3_util.c  g3b.c  g3c.c  g3imm.c  g3x.c  gx.c  gx_bgcnt.c  gx_load2d.c  gx_load3d.c  gx_vramcnt.c  gxasm.c  gxstate.c  meson.build
libraries/init/: meson.build
libraries/init/src/: crt0.c  meson.build
libraries/math/: meson.build
libraries/math/src/: checksum.c  crc.c  dgt.c  fft.c  math.c  meson.build  qsort.c
libraries/mb/: meson.build
libraries/mb/include/: mb_block.h  mb_cache.h  mb_child.h  mb_common.h  mb_fake_child.h  mb_fileinfo.h  mb_gameinfo.h  mb_private.h  mb_rom_header.h  mb_task.h  mb_wm.h  mb_wm_base.h
libraries/mb/src/: mb_block.c  mb_cache.c  mb_child.c  mb_common.c  mb_fake_child.c  mb_fileinfo.c  mb_gameinfo.c  mb_parent.c  mb_task.c  mb_wm.c  mb_wm_base.c  meson.build
libraries/mi/: meson.build
libraries/mi/include/: dma_red.h  mi_dma.h
libraries/mi/src/: meson.build  mi_byteAccess.c  mi_cache.c  mi_card.c  mi_compress.c  mi_dma.c  mi_dma_card.c  mi_dma_gxcommand.c  mi_dma_hblank.c  mi_dma_mainmem.c  mi_dma_vblank.c  mi_exMemory.c  mi_init.c  mi_memory.c  mi_stream.c  mi_swap.c  mi_uncomp_stream.c  mi_uncompress.c  mi_wram.c
libraries/os/: meson.build
libraries/os/src/: meson.build  os_alarm.c  os_alloc.c  os_arena.c  os_argument.c  os_cache.c  os_callTrace.c  os_china.c  os_context.c  os_emulator.c  os_entropy.c  os_exception.c  os_functionCost.c  os_init.c  os_interrupt.c  os_irqHandler.c  os_irqTable.c  os_message.c  os_mutex.c  os_ownerInfo.c  os_printf.c  os_profile.c  os_protectionRegion.c  os_protectionUnit.c  os_reset.c  os_spinLock.c  os_system.c  os_tcm.c  os_terminate_proc.c  os_thread.c  os_tick.c  os_timer.c  os_valarm.c  os_vramExclusive.c
libraries/prc/: meson.build
libraries/prc/src/: meson.build  prc.c  prc_algo_common.c  prc_algo_fine.c  prc_algo_light.c  prc_algo_standard.c  prc_algo_superfine.c  prc_resample.c
libraries/pxi/: meson.build
libraries/pxi/src/: meson.build  pxi_fifo.c  pxi_init.c
libraries/rtc/: meson.build
libraries/rtc/src/: convert.c  external.c  internal.c  meson.build
libraries/snd/: meson.build
libraries/snd/src/: meson.build  snd_alarm.c  snd_bank.c  snd_command.c  snd_data.c  snd_interface.c  snd_main.c  snd_util.c  snd_work.c
libraries/spi/: meson.build
libraries/spi/include/: nvram_sp.h  spi.h  spi_sp.h
libraries/spi/src/: meson.build  mic.c  pm.c  tp.c
libraries/std/: meson.build
libraries/std/include/: sjis2unicode.h  unicode2sjis.h
libraries/std/src/: meson.build  std_sprintf.c  std_string.c  std_unicode.c
libraries/stubs/: meson.build
libraries/stubs/cw/: meson.build
libraries/stubs/cw/src/: interworking.c  meson.build
libraries/stubs/isd/: meson.build
libraries/stubs/isd/src/: meson.build  stubs_isd.c
libraries/utest/: meson.build
libraries/utest/src/: meson.build  utest_assert.c  utest_cui.c  utest_main.c
libraries/wbt/: meson.build
libraries/wbt/src/: meson.build  wbt_api.c  wbt_context.c
libraries/wfs/: meson.build
libraries/wfs/src/: meson.build  wfs_archive.c  wfs_client.c  wfs_format.c  wfs_server.c  wfs_thread.c
libraries/wm/: meson.build
libraries/wm/include/: wm_private.h
libraries/wm/src/: meson.build  wm_arm9_private.h  wm_dcf.c  wm_ds.c  wm_etc.c  wm_ks.c  wm_mp.c  wm_standard.c  wm_sync.c  wm_system.c
libraries/wvr/: meson.build
libraries/wvr/src/: meson.build  wvr.c
specfiles/: ARM9-TS.lcf.template
tools/: meson.build
tools/makelcf/: container.c  createlcf.c  defval.c  defval.h  makelcf.c  makelcf.h  meson.build  misc.c  misc.h  spec.l  spec.y  tlcf.l  tlcf.y
(+144 files in other folders)
