nitrosdk_libs = []
nitrosdk_prebuilt = []

subdir('card')
subdir('cht')
subdir('cp')
subdir('ctrdg')
subdir('dgt')
subdir('e3s')
subdir('env')
subdir('ext')
subdir('fs')
subdir('fx')
subdir('gx')
subdir('init')
subdir('math')
subdir('mb')
subdir('mi')
subdir('os')
subdir('prc')
subdir('pxi')
subdir('rtc')
subdir('snd')
subdir('spi')
subdir('std')
subdir('stubs')
subdir('utest')
subdir('wbt')
subdir('wfs')
subdir('wm')
subdir('wvr')
