libctrdg_srcs = files(
    'ctrdg.c',
    'ctrdg_proc.c',
    'ctrdg_vib.c',
    'ctrdg_backup.c',
    'ctrdg_flash_common.c',
    'ctrdg_flash_AT29LV512.c',
    'ctrdg_flash_LE26FV10N1TS-10.c',
    'ctrdg_flash_LE39FW512.c',
    'ctrdg_flash_MX29L010.c',
    'ctrdg_flash_MX29L512.c',
    'ctrdg_sram.c',
    'ctrdg_task.c'
)
